INCLUDE(${SWIG_USE_FILE})

SET_SOURCE_FILES_PROPERTIES(CoreFlows.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(CoreFlows.i PROPERTIES C OFF)
SET_SOURCE_FILES_PROPERTIES(CoreFlows.i PROPERTIES SWIG_DEFINITIONS "-shadow")

INCLUDE_DIRECTORIES(
  ${PYTHON_INCLUDE_DIRS}
  ${CoreFlows_SRC}/inc
)

INCLUDE_DIRECTORIES(
      ${PETSC_INCLUDES}
      ${CDMATH_INCLUDES}
      ${CDMATH_INCLUDES}/med											    #
      ${CDMATH_INCLUDES}/medcoupling											    #
)
SET(_extra_lib_SWIG ${CDMATH_LIBRARIES} ${PETSC_LIBRARIES})   


SWIG_ADD_MODULE(CoreFlows python CoreFlows.i)
SWIG_LINK_LIBRARIES(CoreFlows ${PYTHON_LIBRARIES} ${_extra_lib_SWIG} CoreFlows ${PETSC_LIBRARIES})

INSTALL(TARGETS _CoreFlows DESTINATION lib/CoreFlows_Python)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/CoreFlows.py DESTINATION bin/CoreFlows_Python)
INSTALL(FILES ${CoreFlows_SOURCE_DIR}/main.py DESTINATION bin/)
